# Raytracer

./: .gitignore  CMakeLists.txt  README.md  config_scene_file  config_scene_file2  note_tuto_config
Core/DLLoader/include/: DLLoader.hpp
Core/DLLoader/src/: DLLoader.cpp
Core/include/: RayTracer.hpp  Raytracer.hpp  parse_config.hpp
Core/src/: RayTracer.cpp  Raytracer.cpp  main.cpp  parse_config.cpp
Math/Factories/include/: Factory.hpp
Math/Factories/src/: Factory.cpp
Math/Point3D/include/: Point3D.hpp
Math/Point3D/src/: Point3D.cpp
Math/Vectors/include/: Vector3D.hpp
Math/Vectors/src/: Vector3D.cpp
Math/include/: IFactory.hpp  IVector3D.hpp
RayTracer/Builders/include/: IceCreamBuilder.hpp
RayTracer/Builders/src/: IceCreamBuilder.cpp
RayTracer/Directors/include/: IceCreamDirector.hpp
RayTracer/Directors/src/: IceCreamDirector.cpp
RayTracer/Lights/include/: AmbientLight.hpp  DirectionalLight.hpp  LightsFactory.hpp
RayTracer/Lights/src/: AmbientLight.cpp  DirectionalLight.cpp  LightsFactory.cpp
RayTracer/Math/include/: MathFactory.hpp  Point3D.hpp  Rectangle3D.hpp  Vector3D.hpp
RayTracer/Math/src/: MathFactory.cpp  Point3D.cpp  Rectangle3D.cpp  Vector3D.cpp
RayTracer/Primitives/include/: Cone.hpp  Cylinder.hpp  Plane.hpp  PrimitivesFactory.hpp  Rectangle3D.hpp  Sphere.hpp
RayTracer/Primitives/src/: Cone.cpp  Cylinder.cpp  Plane.cpp  PrimitivesFactory.cpp  Rectangle3D.cpp  Sphere.cpp
RayTracer/Render/include/: Color.hpp  RenderFactory.hpp
RayTracer/Render/src/: Color.cpp  RenderFactory.cpp
RayTracer/View/include/: Camera.hpp  Ray.hpp  ViewFactory.hpp
RayTracer/View/src/: Camera.cpp  Ray.cpp  ViewFactory.cpp
RayTracer/include/: CustomObject.hpp  Factory.hpp  IBuilder.hpp  IDirector.hpp  IFactory.hpp  ILights.hpp  IPrimitive.hpp  IPrimitives.hpp  Library.hpp  Scene.hpp  Signatures.hpp
RayTracer/src/: CustomObject.cpp  Factory.cpp  Library.cpp  Scene.cpp
Raytracer/Camera/include/: Camera.hpp
Raytracer/Camera/src/: Camera.cpp
Raytracer/Color/include/: Color.hpp
Raytracer/Color/src/: Color.cpp
Raytracer/Cone/include/: Cone.hpp
Raytracer/Cone/src/: Cone.cpp
Raytracer/Cylinder/include/: Cylinder.hpp
Raytracer/Cylinder/src/: Cylinder.cpp
Raytracer/DirectionalLight/include/: DirectionalLight.hpp
Raytracer/DirectionalLight/src/: DirectionalLight.cpp
Raytracer/Ray/include/: Ray.hpp
Raytracer/Ray/src/: Ray.cpp
Raytracer/Rectangle3D/include/: Rectangle3D.hpp
Raytracer/Rectangle3D/src/: Rectangle3D.cpp
Raytracer/Scene/include/: Scene.hpp
Raytracer/Scene/src/: Scene.cpp
Raytracer/Sphere/include/: Sphere.hpp
Raytracer/Sphere/src/: Sphere.cpp
configs/: CustomObject.cpp  drop_shadows.cfg  scene_file_1  scene_file_2  shadows.cfg  sky.cfg
